@@ -288,6 +288,26 @@ DataManager::DofOwnerInit(void)
 
 		OutHdl.Log() << std::endl;
 
+		OutHdl.Log() << "struct node momentum dofs:";
+
+		for (NodeContainerType::const_iterator i = NodeData[Node::STRUCTURAL].NodeContainer.begin();
+			i != NodeData[Node::STRUCTURAL].NodeContainer.end(); ++i)
+		{
+			const StructNode *pNode = dynamic_cast<const StructNode *>(i->second);
+			ASSERT(pNode != 0);
+			switch (pNode->GetStructNodeType()) {
+			case StructNode::STATIC:
+			case StructNode::DUMMY:
+				continue;
+
+			default:
+				break;
+			}
+			OutHdl.Log() << " " << pNode->iGetFirstMomentumIndex();
+		}
+
+		OutHdl.Log() << std::endl;
+
 		OutHdl.Log() << "struct node labels:";
 
 		for (NodeContainerType::const_iterator i = NodeData[Node::STRUCTURAL].NodeContainer.begin();
